--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #datasource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mydb1.ch99ygvi6iim.us-east-1.rds.amazonaws.com:3306/db1
+spring.datasource.url=jdbc:mysql://mysql1.c49kb6aq2c8o.us-east-1.rds.amazonaws.com:3306/db1
 spring.datasource.username=root
 spring.datasource.password=12345678
